--- a/common/common.scss
+++ b/common/common.scss
@@ -28,10 +28,10 @@ html {
 }
 
 tbody {
-  border-top: 3px solid #44475a;
+  border-top: 3px solid #5F69EF;
   tr.topic-list-item {
-    border-bottom: 1px solid #44475a;
-    background-color: #282a36;
+    border-bottom: 1px solid #232750;
+    background-color: #383d6a;
   }
 }
 
