--- a/common/common.scss
+++ b/common/common.scss
@@ -59,6 +59,10 @@ tbody {
   height: 75px;
 }
 
+#site-logo {
+    display: url("https://elasticdao.org/images/edao.svg")
+}
+
 // Menu Panel Links
 .panel-body-contents {
   a {
