--- a/common/common.scss
+++ b/common/common.scss
@@ -60,7 +60,7 @@ tbody {
 }
 
 #site-logo {
-    display: url("https://elasticdao.org/images/edao.svg")
+    display: url(https://elasticdao.org/images/edao.svg) no-repeat;
 }
 
 // Menu Panel Links
