--- a/common/common.scss
+++ b/common/common.scss
@@ -168,7 +168,7 @@ tbody {
 }
 
 // category -latest background color update
-.latest-topic-list-item, categories-only-category {
+.latest-topic-list-item, .categories-only-category {
   background-color: #383d6a;
 }
   
