--- a/common/common.scss
+++ b/common/common.scss
@@ -168,10 +168,10 @@ tbody {
 }
 
 // category -latest background color update
-.latest-topic-list-item, .categories-only-category {
+ .categories, .latest, .latest-topic-list-item, .categories-only-category {
   background-color: #383d6a;
 }
-  
+
 // not visited topics
 tr:not(.visited) .link-top-line .title {
   color: $primary;
