--- a/common/common.scss
+++ b/common/common.scss
@@ -188,6 +188,15 @@ tbody {
   background-color: #383d6a;
 }
 
+.latest td {
+  background-color: #383d6a;
+}
+
+.latest-list td {
+  background-color: #383d6a;
+}
+
+
 // category -latest background color update end
 
 // not visited topics
