--- a/common/common.scss
+++ b/common/common.scss
@@ -172,6 +172,10 @@ tbody {
   background-color: #383d6a;
 }
 
+.category-list th {
+  color: var(--primary-medium);
+}
+
 // category -latest background color update end
 
 // not visited topics
