--- a/common/common.scss
+++ b/common/common.scss
@@ -176,6 +176,10 @@ tbody {
   color: var(--primary-medium);
 }
 
+.latest-list td {
+   background-color: #383d6a;
+}
+
 // category -latest background color update end
 
 // not visited topics
