--- a/common/common.scss
+++ b/common/common.scss
@@ -180,6 +180,10 @@ tbody {
    background-color: #383d6a;
 }
 
+.latest td {
+  background-color: #383d6a;
+}
+
 // category -latest background color update end
 
 // not visited topics
