--- a/common/common.scss
+++ b/common/common.scss
@@ -184,6 +184,10 @@ tbody {
   background-color: #383d6a;
 }
 
+.category-list with-topics .latest td {
+  background-color: #383d6a;
+}
+
 // category -latest background color update end
 
 // not visited topics
