--- a/common/common.scss
+++ b/common/common.scss
@@ -188,6 +188,10 @@ tbody {
   background-color: #383d6a;
 }
 
+table .latest td {
+  background-color: #383d6a;
+}
+
 // category -latest background color update end
 
 // not visited topics
