--- a/common/common.scss
+++ b/common/common.scss
@@ -192,6 +192,10 @@ table .latest td {
   background-color: #383d6a;
 }
 
+.category-list tbody .latest {
+    background-color: #383d6a;
+}
+
 // category -latest background color update end
 
 // not visited topics
