--- a/common/common.scss
+++ b/common/common.scss
@@ -1,77 +1,438 @@
-@import "fonts";
+// Only applying to main topic lists over 768px wide @media screen and (min-width: 768px) {
+     .navigation-topics, .categories-list, .tags-page, body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
+         #main-outlet {
+             &.wrap:before {
+                 display: none;
+            }
+        }
+         // Structuring the main grid layout #main-outlet > span:first-child {
+             grid-area: outlet;
+        }
+         .container:first-of-type {
+             grid-area: alerts;
+        }
+         .container:nth-of-type(2) {
+             grid-area: pins;
+        }
+         .list-controls {
+             grid-area: nav;
+        }
+         .list-container {
+             grid-area: topic-list;
+        }
+         .section-tag-info {
+             grid-column-end: 3;
+             grid-column-start: 1;
+        }
+         #navigation-bar {
+             margin-top: 1em;
+        }
+         #main-outlet {
+             display: grid;
+             grid-column-gap: 1.5em;
+             @if $sidebar-alignment == "left" {
+                 grid-template-columns: 2fr 10fr;
+                 // 12 column grid grid-template-areas: "outlet outlet" "alerts alerts" "pins pins" "nav topic-list";
+            }
+             @else {
+                 grid-template-columns: 10fr 2fr;
+                 grid-template-areas: "outlet outlet" "alerts alerts" "pins pins" "topic-list nav";
+            }
+        }
+         // Changing the layout to fit the grid .category-breadcrumb {
+             font-size: 1.1487em;
+             .badge-wrapper.bullet .badge-category-parent-bg, .badge-wrapper.bullet .badge-category-bg {
+                 width: 10px;
+                 height: 10px;
+            }
+             .select-kit.combo-box.category-drop .select-kit-row .badge-wrapper.box {
+                 font-weight: normal;
+                 padding: 4px 6px;
+            }
+        }
+         .list-container {
+             min-width: 70%;
+             // Don't let the topic list get too narrow .topic-list, .category-list {
+                 th {
+                     padding-top: 0;
+                     // Align to top of nav 
+                }
+            }
+        }
+         .latest-topic-list .table-heading, .top-topic-list .table-heading {
+             padding-top: 0;
+        }
+         .list-controls {
+             z-index: 100;
+             // Above topic list content .container {
+                 position: -webkit-sticky;
+                 // required for Safari position: sticky;
+                 top: 5.8572em;
+                 // required for sticky 
+            }
+             .btn {
+                 margin: 0;
+            }
+             #show-tag-info {
+                 width: 100%;
+            }
+             .navigation-controls {
+                 flex-wrap: wrap;
+                 width: 100%;
+            }
+             #create-topic {
+                 flex: 1 1 auto;
+                 order: 6;
+                 margin-top: 0.5em;
+            }
+             button {
+                 order: 6;
+            }
+             .notifications-button {
+                 order: 7;
+                 margin-right: 0;
+                 margin-top: 0.5em;
+            }
+             .edit-category {
+                 flex: 1 1 auto;
+                 width: 100%;
+                 margin-top: 0.5em;
+            }
+             .categories-admin-dropdown {
+                 order: 8;
+                 margin-bottom: 0;
+                 margin-left: 0.5em;
+                 margin-top: 0.5em;
+                 button {
+                     height: 2em;
+                }
+            }
+             .nav-pills {
+                 display: flex;
+                 flex: 1 1 100%;
+                 flex-direction: column;
+                 margin: 0.5em 0;
+                 li {
+                     margin: 0;
+                     &:empty {
+                         display: none;
+                    }
+                }
+                 & > li > a {
+                     padding: 0.5em 0.714em;
+                }
+                 @if $sidebar-alignment == left {
+                     & > li.active > a {
+                         &:after {
+                             opacity: 0.75;
+                             content: svg-uri( '<svg width="15px" height="15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="white" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>' );
+                             display: inline;
+                             margin-left: 5px;
+                        }
+                    }
+                }
+            }
+             .select-kit-header {
+                 span.category-name {
+                     max-width: 8.5em;
+                }
+            }
+             .category-navigation, .navigation-container {
+                 display: flex;
+                 flex-wrap: wrap;
+            }
+             ol {
+                 display: flex;
+                 flex-wrap: wrap;
+                 flex: 1 1 auto;
+                 margin: 0;
+                 li.category-drop, li.tag-drop {
+                     margin: 0;
+                     flex: 1 1 100%;
+                     &:not(:first-of-type) {
+                         margin: 0.5em 0 0 0;
+                    }
+                }
+            }
+             .select-kit .select-kit-header .caret-icon {
+                 &:before {
+                     opacity: 0.75;
+                     content: svg-uri( '<svg width="15px" height="15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"></path></svg>' );
+                }
+            }
+        }
+    }
+     .tags-page.staff {
+         .list-controls {
+             .admin-tag {
+                 order: 9;
+                 flex: 1 1 auto;
+                 margin-top: 0.5em;
+                 &.btn-danger {
+                     margin-left: 0.5em;
+                }
+            }
+        }
+    }
+     .category-breadcrumb > li {
+         height: auto;
+    }
+}
 
-@keyframes background-fade-highlight {
-  0% {
-    background-color: $love#{30}; //new color!
+
+
+// User menu panel links + icons
+.user-menu {
+  .menu-links-header {
+    .menu-links-row {
+      border-color: #44475a;
+      li a.active {
+        border-color: #44475a;
+      }
+    }
+    a {
+      color: $primary;
+      text-decoration: underline;
+      text-decoration-color: transparent;
+      &:hover {
+      color: $tertiary;
+      text-decoration-color: $tertiary;
+      background-color: transparent;
+      }
+    }
+    .user .d-icon, .glyphs .d-icon {
+      color: $primary;
+    }
   }
-  100% {
+}
+
+.user-menu .quick-access-panel li {
+  .d-icon {
+    color: $primary;
+  };
+  background-color: $tertiary#{50};
+  &:not(.read):hover {
+    background-color: $tertiary#{50};
+  }
+  &:hover {
     background-color: transparent;
   }
 }
 
-a {
-  color: $quaternary;
-}
-
-html {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 17px;
-  &.text-size-smaller {
-    font-size: 16px;
-  }
-  &.text-size-larger {
-    font-size: 18px;
-  }
-  &.text-size-largest {
-    font-size: 20px;
+.quick-access-panel:hover {
+  .d-icon {
+    color: $primary !important;
   }
 }
 
-tbody {
-  border-top: 3px solid #5F69EF;
-  tr.topic-list-item {
-    border-bottom: 1px solid #232750;
+// menu panel hover
+.menu-panel li a.widget-link:hover,
+.menu-panel li a.widget-link:focus,
+.menu-panel li.heading a.widget-link:hover,
+.menu-panel li.heading a.widget-link:focus {
+  background-color: transparent;
+}
+
+// select kit highlight
+.select-kit .select-kit-row.is-highlighted {
+  background-color: $highlight-high#{50};
+}
+
+// notifications
+.d-header .unread-notifications {
+  background-color: $success;
+}
+.unread-private-messages {
+  background-color: $love;
+}
+
+// Last visit line + text
+.topic-list .topic-list-item-separator td {
+  border-bottom: 1px solid $highlight-high#{90};
+  span {
+    color: $highlight-high;
+  }
+}
+
+// title when injected on top of topics
+.extra-info-wrapper {
+  .topic-link {
+    color: $primary;
+  }
+  .categories-wrapper .badge-wrapper .badge-category {
+    color: $primary#{90} !important;
+  }
+}
+
+// visited topics
+.topic-list-item.visited a.title:not(.badge-notification),
+.latest-topic-list-item.visited a.title:not(.badge-notification),
+.category-topic-link.visited a.title:not(.badge-notification) {
+  color: $primary-high;
+  font-weight: 400;
+}
+
+// category -latest background color update
+.category-list td {
+  background-color: #383d6a;
+}
+
+.category-list th {
+  color: var(--primary-medium);
+}
+
+.category-list tbody .latest {
     background-color: #383d6a;
+}
+
+// category -latest background color update end
+
+// not visited topics
+tr:not(.visited) .link-top-line .title {
+  color: $primary;
+  font-weight: 600;
+}
+
+td .link-bottom-line .badge-category {
+  font-weight: 400;
+}
+
+// Navigation Pills
+.nav-pills:not(#global-sidebar-nav) > li > a {
+  color: $primary;
+  font-family: "Source Sans Pro" sans-serif;
+  border-radius: 4px;
+  &.active {
+    background-color: $tertiary;
+    color: $secondary;
+    font-weight: 600;
+  }
+  &:hover {
+    background-color: $tertiary;
+    color: $secondary;
   }
 }
 
-.alert.alert-info {
-  background-color: $secondary-high#{50};
-  border: 1px solid $love#{50};
-  a {
-    color: $quaternary;
-    font-family: 'Source Code Pro';
-    font-size: 13px;
+// create topic
+button#create-topic {
+  background-color: $success;
+  color: $secondary;
+  border-radius: 4px;
+  .d-icon {
+    color: $secondary;
+  }
+  &:hover {
+    background-color: $success-medium;
+  }
+}
+
+// header icons 
+.d-header-icons {
+  .icon:hover {
+    background-color: $primary#{20};
+    border-radius: 4px;
+  }
+  .d-icon {
+    color: $primary;
     &:hover {
-      color: $quaternary#{90};
+      color: $primary;
     }
   }
 }
 
-.topic-list td {
+.d-header-icons .icon:hover .d-icon, .d-header-icons .icon:focus .d-icon {
   color: $primary;
 }
 
-// Header
-.d-header {
-  background-color: $secondary;
-  box-shadow: 0 5px 10px 0 rgba(0,0,0,.15);
-  height: 75px;
+// category box color
+.category-boxes .category-box-inner, .category-boxes-with-topics .category-box-inner {
+  border: 1px solid #44475a;
 }
 
-// Menu Panel Links
-.panel-body-contents {
-  a {
-    color: $primary;
-    text-decoration: underline;
-    text-decoration-color: transparent;
-    &:hover {
-      color: $tertiary;
-      text-decoration-color: $tertiary;
-    }
+// input focus
+input[type="text"]:focus, input[type="password"]:focus,
+input[type="datetime"]:focus, input[type="datetime-local"]:focus,
+input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus,
+input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus,
+input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus,
+input[type="color"]:focus, textarea:focus {
+  box-shadow: none;
+}
+
+// select kit collection
+.select-kit-row .category-name, .select-kit-row .name {
+  color: $primary;
+  font-weight: 400;
+}
+.select-kit-row.is-highlighted[title="no tags"] span.name {
+  color: $tertiary;
+  font-weight: 600;
+}
+
+// post notice 
+.post-notice {
+  background-color: $secondary-high#{50};
+  border: 1px solid $love#{50};
+}
+
+// user name on posts
+.topic-meta-data {
+  .names .username a {
+    color: $success;
   }
-  .badge-wrapper.bullet span.badge-category {
-    color: $primary;
-    font-weight: 400;
+}
+
+// custom side bar styles
+.custom-nav-list {
+  li:hover, h3 a:hover{
+    background-color: $tertiary#{50} !important;
   }
+}
+
+#global-sidebar-nav > li > a:hover {
+  background-color: transparent;
+}
+
+.custom-nav-list h3 {
+  border-color: #44475a;
+}
+
+// avatar white background
+.avatar {
+  background-color: $primary;
+}
+
+.unread {
+  background-color: $success;
+}
+
+// topic progress
+.timeline-container .topic-timeline .timeline-scrollarea {
+  border-color: rgba($love,.9);
+  .timeline-handle {
+    background-color: rgba($love,.9);
+  }
+}
+
+#topic-progress {
+  color: rgba($love,.9);
+  background-color: $secondary;
+  border-color: rgba($love,.5);
+  .bg {
+    background-color: rgba($love,.4);
+    border-color: rgba($love,.5);
+  }
+}
+
+// select kit is selected
+.select-kit .select-kit-row.is-selected, .select-kit .select-kit-row.is-selected.is-highlighted {
+  background-color: $tertiary#{70} !important;
+}
+.select-kit .select-kit-row.is-highlighted {
+  background-color: $tertiary#{40} !important;
+} 
+
+// composer popup
+.composer-popup {
+  background: rgb(77,69,104);
 }
