--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,4 @@
+@import "fonts";
 // Only applying to main topic lists over 768px wide @media screen and (min-width: 768px) {
      .navigation-topics, .categories-list, .tags-page, body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
          #main-outlet {
